<resources>
    <string name="app_name">LifeStyleApp</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="weather">Weather</string>
    <string name="module3">module3</string>
    <string name="module4">module4</string>
    <string name="module5">module5</string>
    <string name="module6">module6</string>
    <string name="title">Lifestyle App</string>
    <string name="title_activity_weather">ScrollingActivity</string>
    <string name="title_activity_weath">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="temperature"> TempTemp </string>
    <string name="tempCity">tempcity</string>
    <string name="userCity">city</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="countries_array">
        <item>United States</item>
        <item>Canada</item>
        <item>Mexico</item>
    </string-array>

    <string-array name="goal_array">
        <item>Lose Weight</item>
        <item>Maintain Weight</item>
        <item>Gain Weight</item>
    </string-array>

    <string-array name="active_array">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>


    </string-array>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_bmi">BMI</string>
    <string name="google_maps_key">AIzaSyDjGMomdpEGN_gUvGERMQoaKL_bp58MJjU</string>
    <string name="menu_userProfile">User Profile</string>
    <string name="menu_hikes">Trails</string>
    <string name="menu_fitnessGoal">Fitness Goal</string>
    <string name="health">Health</string>
    <string name="set_goal">Set Goal</string>
    <string name="what_is_your_fitness_goal">What is your fitness goal?</string>
    <string name="are_you_active_or_sedentary">Are you active or sedentary?</string>
    <string name="basal_metabolic_rate">Basal Metabolic Rate:</string>
    <string name="stepCount">Step Count</string>

</resources>
