<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_hikes"
            android:title="@string/menu_hikes" />
        <item
            android:id="@+id/nav_user_profile"
            android:title="@string/menu_userProfile" />
        <item
            android:id="@+id/nav_bmi"
            android:title="@string/menu_bmi" />

        <item
            android:id="@+id/nav_fitness_goal"
            android:title="@string/health" />
    </group>
</menu>